@@ -1,5 +1,3 @@
-[Author::Plicease::FiveEight]
-
 [GatherDir]
 exclude_filename = Makefile.PL
 exclude_filename = Build.PL
