@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Merge [FiveEight] into [SpecialPrereqs]
 
 1.71      2015-05-27 15:23:38 -0400
   - Added scp_dest and url options to [Author::Plicease::Upload]
